@startuml
'https://plantuml.com/class-diagram

class App
class FileMenuOptions
class ToDoList

App <|-- FileMenuOptions
App <|-- ToDoList

class FileMenuOptions {
    +openFile()
    +openAnotherFile()
    +saveFile()
    +editInformation()
    +deleteInformation()
    +FileChooser fileC
    +File openFile
    +File saveFile
    +Button commit
    +Button removeTask
}

class ToDoList {
    -ToDoList()
    +getListName()
    +addListName()
    +getTask()
    +addTask()
    +getDueDate()
    +addDueDate()
    +getTaskDescription()
    +addTaskDescription()
    +complete()
    +SimpleStringProperty listName
    +SimpleStringProperty task
    +SimpleStringProperty dueDate
    +SimpleStringProperty taskDescription
}

class App {
    +start()
    {static} +main()
}
@enduml